tests/ivg/invalid/invalid_pen_caps.ivg
format IVG-3
// unrecognized stroke caps
pen caps:squiggle
